--- a/docs/assets/py/Ergo_Address_Encoding.ipynb
+++ b/docs/assets/py/Ergo_Address_Encoding.ipynb
@@ -1,24 +1,41 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "ec1acc91",
+   "metadata": {},
+   "source": [
+    "# Address Encoding \n",
+    "\n",
+    "\n",
+    "Unlike a (hex-encoded) binary representation of a script, an Ergo address use a `Base58-encoding` and therefore has some advantageous characteristics which the binary representation does not offer:\n",
+    "\n",
+    "* We can quickly check the integrity of an address via an integrated checksum (a \"small-sized datum derived from a block of digital data to detect errors that may have been introduced during its transmission or storage\", according to Wikipedia).\n",
+    "* A prefix of the Address shows you the network and address type. In particular, the network prefix prevents you from mistakenly sending mainnet tokens to the testnet Address.\n",
+    "* The Address uses an encoding (namely, Base58, as mentioned) that avoids similarly-looking characters and is friendly to double-clicking and line-breaking in emails.\n",
+    "* An address encodes network type, address type, checksum, and enough information to correspond with particular scripts.\n",
+    "\n",
+    "Below is an academic exercise to understand what's going on, you would use [AppKit](appkit.md) in practice. \n",
+    "\n",
+    "A Jupyter notebook was created to demonstrate the process of generating a P2S (Pay-to-Script) address using the provided ErgoTree. The example used in the notebook was the GuapSwap proxy address.\n",
+    "\n",
+    "The exploration of the box in the Ergo explorer provided the P2S address in base58 format, along with the serialized ErgoTree encoded in base16. The goal was to replicate the P2S address using the ErgoTree.\n",
+    "\n",
+    "The replication process was quite successful, with only a small discrepancy of 4 bytes due to the checksum. The mismatch occurred because not all the parameters used by Ergo in the blake2b256() hash function were known. If the missing parameters can be obtained or located, it should be possible to reproduce the same result accurately."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 85,
    "id": "8c75e109",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Necessary imports\n",
-    "\n",
     "# Credit: lgd#5847\n",
-    "# This is just an academic exercise to understand what's going on, you would use AppKit in practice. \n",
     "\n",
-    "# I created a jupyter notebook to show how you could create a P2S address if you had the ErgoTree. \n",
-    "# I used my GuapSwap proxy address as an example. \n",
-    "# Since the box on the explorer tells you the P2S address in base58 as well as the serialized ErgoTree encoded in base16, \n",
-    "# I tried to reproduce the P2S address using the ErgoTree. \n",
-    "# I came really close, only off by 4 bytes due to the checksum, since I don't know all the parameters Ergo uses in the blake2b256() hash function. \n",
-    "# If someone can figure out/find it somewhere, then it should end up producing the same result. \n",
     "\n",
+    "# Necessary imports\n",
     "from hashlib import blake2b\n",
     "from baseconv import base16, base58"
    ]
