--- a/docs/dev/tokens/nfts/v1v2.md
+++ b/docs/dev/tokens/nfts/v1v2.md
@@ -1,8 +1,8 @@
 # Design Choices: V1 vs V2
 
-EIP-0024 offers two design versions for artwork issuance: V1 and V2. Both designs involve two important boxes in the issuance process: the issuance box and the issuer box. The main difference between V1 and V2 lies in the issuer box.
+[EIP-0024](eip24.md) offers two design versions for artwork issuance: V1 and V2. Both designs involve two important boxes in the issuance process: the issuance box and the issuer box. The main difference between V1 and V2 lies in the issuer box.
 
-#### V1 Design
+## V1 Design
 
 In V1, the issuer box has the following attributes:
 
@@ -11,7 +11,7 @@ In V1, the issuer box has the following attributes:
 
 V1 mainly focuses on handling royalties for the artist or proxy contract.
 
-#### V2 Design
+## V2 Design
 
 V2 addresses some of the shortcomings in V1 and extends the proposal to include collections. The V2 issuer box has the following attributes:
 
@@ -23,6 +23,6 @@ V2 addresses some of the shortcomings in V1 and extends the proposal to include 
 
 V2 offers more flexibility and features, such as handling multiple royalty recipients, detailed artwork traits, and additional information.
 
-### Artist Identity
+## Artist Identity
 
 Establishing the artist's identity is crucial for auction houses to prevent NFT scams and unauthorized copies. The artist's identity cannot be solely determined by the issuance box, as it may be impersonated. Instead, the artist's identity and address are established by the first P2PK input in the transaction chain leading to the artwork issuance. This means that if a proxy contract is used, the first input of the transaction that sends funds to the proxy contract will determine the artist's identity.
